# naive-rag-app

./: .env.example  .gitignore  README.md  pyproject.toml  sample.txt
.github/workflows/: ci.yml
configs/: chunking.yml  embeddings.yml  llm.yml  logging.yml  retriever.yml  vector_store.yml
src/: __init__.py
src/api/: app.py
src/core/: chunker.py  embedder.py  ingestion.py  llm.py  loader.py  rag.py  retriever.py  vector_store.py
src/ui/: __init__.py  app.py
tests/integration/: test_ingest_load_chunk.py  test_ingestion.py
tests/unit/: test_api.py  test_chunker.py  test_embedder.py  test_llm.py  test_loader.py  test_rag.py  test_retriever.py  test_vector_store.py
