[tool.poetry]
name = "naive-rag-application"
version = "0.1.0"
description = "Modular RAG-powered AI assistant"
authors = ["Anas <anasksz@gmx.de>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.116.1"
langchain = "^0.3.26"
chromadb = "^1.0.15"
openai = "^1.97.0"
python-dotenv = "^1.1.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"
pytest = "^8.4.1"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"