[tool.poetry]
name = "naive-rag-application"
version = "0.1.0"
description = "Modular RAG-powered AI assistant"
authors = ["Anas <anasksz@gmx.de>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
fastapi = "^0.116.1"
langchain = "^0.3.26"
chromadb = "^1.0.15"
openai = "^1.97.0"
python-dotenv = "^1.1.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
streamlit = "^1.47.0"
huggingface-hub = "^0.33.4"
pydantic = "^2.11.7"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.28"
langchain-huggingface = "^0.3.0"
langchain-anthropic = "^0.3.17"
langchain-community = "^0.3.27"
langchain-ollama = "^0.3.6"
langchain-chroma = "^0.2.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
mypy = "^1.17.0"
types-pyyaml = "^6.0.12.20250516"
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-s",
    "--log-cli-level=INFO",
    "--log-cli-format=%(asctime)s [%(levelname)8s] %(name)s: %(message)s",
    "--log-cli-date-format=%Y-%m-%d %H:%M:%S"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"